Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104226

QmediaDevices::videoInputs() fails to find a camera if libcamera is installed.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.4.1
    • 6.2.4, 6.3.1
    • Multimedia
    • None
    • Debian sid (unstable)
    • Linux/X11
    • 6156d0c27b (qt/tqtc-qtmultimedia/6.3) 5c3805dcd6 (qt/qtmultimedia/6.4.1)

      Simple code:

      #include <QCoreApplication>
      #include <QMediaDevices>
      #include <QCameraDevice>
      #include <QDebug>
      
      int main(int argc, char *argv[])
      {
          QCoreApplication a(argc, argv);
      
          qDebug() << QMediaDevices::videoInputs();
      
          return 0;
      }
      

      When run without libcamera installed on the system:

       

      $ ./test 
      QList("QCameraDevice(name=Integrated Camera: Integrated C, position=, orientation=%3)" )
      

      But when ran with libcamera installed (just the lib, not development files):

      $ ./test  
      [0:12:26.396077166] [70839]  INFO Camera camera_manager.cpp:293 libcamera v0.0.0 
      QList()

       

      Granted this could be a non-Qt issue, but ideally Qt should handle libcamera too, as it expands the list of usable cameras.

        1. without_libcamera.txt
          3 kB
        2. with_libcamera.txt
          1 kB
        3. debug_5.txt
          6.28 MB
        4. debug_4.txt
          14 kB
        5. camera_test.tar.gz
          0.6 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            piotr Piotr Srebrny (Inactive)
            lisandropm Lisandro Damián Nicanor Pérez Meyer
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: