Don't use device.path gst property for device ID, instead generate it

The gst_device_get_properties does not work for libcamera; thus, we
cannot use the device.path property as the device ID. Instead, we
generate ID locally and bind it with GstDevice* in one object.

Fixes: QTBUG-104226
Change-Id: I837b74175e48ee15d3fbb3ab26cf21d6a5fea794
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit 31430b1d1b2f89cc81a7301013e381cc3fab1a75)