src/plugins/multimedia/gstreamer/qgstreamervideodevices.cpp
@@ -65,52 +65,53 @@ QList<QCameraDevice> QGstreamerVideoDevices::videoDevices() const
 {
     QList<QCameraDevice> devices;
 
-    for (auto *d : qAsConst(m_videoSources)) {
-        QGstStructure properties = gst_device_get_properties(d);
-        if (!properties.isNull()) {
-            QCameraDevicePrivate *info = new QCameraDevicePrivate;
-            auto *desc = gst_device_get_display_name(d);
-            info->description = QString::fromUtf8(desc);
-            g_free(desc);
+    for (auto device : m_videoSources) {
+        QCameraDevicePrivate *info = new QCameraDevicePrivate;
+        auto *desc = gst_device_get_display_name(device.gstDevice);
+        info->description = QString::fromUtf8(desc);
+        g_free(desc);
+        info->id = device.id;
 
-            info->id = properties["device.path"].toString();
+        if (QGstStructure properties = gst_device_get_properties(device.gstDevice); !properties.isNull()) {
             auto def = properties["is-default"].toBool();
             info->isDefault = def && *def;
-            if (def)
-                devices.prepend(info->create());
-            else
-                devices.append(info->create());
             properties.free();
-            QGstCaps caps = gst_device_get_caps(d);
-            if (!caps.isNull()) {
-                QList<QCameraFormat> formats;
-                QSet<QSize> photoResolutions;
+        }
 
-                int size = caps.size();
-                for (int i = 0; i < size; ++i) {
-                    auto cap = caps.at(i);
+        if (info->isDefault)
+            devices.prepend(info->create());
+        else
+            devices.append(info->create());
 
-                    QSize resolution = cap.resolution();
-                    if (!resolution.isValid())
-                        continue;
+        QGstCaps caps = gst_device_get_caps(device.gstDevice);
+        if (!caps.isNull()) {
+            QList<QCameraFormat> formats;
+            QSet<QSize> photoResolutions;
 
-                    auto pixelFormat = cap.pixelFormat();
-                    auto frameRate = cap.frameRateRange();
+            int size = caps.size();
+            for (int i = 0; i < size; ++i) {
+                auto cap = caps.at(i);
 
-                    auto *f = new QCameraFormatPrivate{
-                        QSharedData(),
-                        pixelFormat,
-                        resolution,
-                        frameRate.min,
-                        frameRate.max
-                    };
-                    formats << f->create();
-                    photoResolutions.insert(resolution);
-                }
-                info->videoFormats = formats;
-                // ### sort resolutions?
-                info->photoResolutions = photoResolutions.values();
+                QSize resolution = cap.resolution();
+                if (!resolution.isValid())
+                    continue;
+
+                auto pixelFormat = cap.pixelFormat();
+                auto frameRate = cap.frameRateRange();
+
+                auto *f = new QCameraFormatPrivate{
+                    QSharedData(),
+                    pixelFormat,
+                    resolution,
+                    frameRate.min,
+                    frameRate.max
+                };
+                formats << f->create();
+                photoResolutions.insert(resolution);
             }
+            info->videoFormats = formats;
+            // ### sort resolutions?
+            info->photoResolutions = photoResolutions.values();
         }
     }
     return devices;
@@ -119,11 +120,11 @@ QList<QCameraDevice> QGstreamerVideoDevices::videoDevices() const
 void QGstreamerVideoDevices::addDevice(GstDevice *device)
 {
     gchar *type = gst_device_get_device_class(device);
-//    qDebug() << "adding device:" << device << type << gst_device_get_display_name(device) << gst_structure_to_string(gst_device_get_properties(device));
     gst_object_ref(device);
     if (!strcmp(type, "Video/Source") || !strcmp(type, "Source/Video")) {
-        m_videoSources.insert(device);
+        m_videoSources.push_back({device, QByteArray::number(m_idGenerator)});
         videoInputsChanged();
+        m_idGenerator++;
     } else {
         gst_object_unref(device);
     }
@@ -133,33 +134,22 @@ void QGstreamerVideoDevices::addDevice(GstDevice *device)
 void QGstreamerVideoDevices::removeDevice(GstDevice *device)
 {
 //    qDebug() << "removing device:" << device << gst_device_get_display_name(device);
-    if (m_videoSources.remove(device))
+    auto it = std::find_if(m_videoSources.begin(), m_videoSources.end(),
+                           [=](const QGstDevice &a) { return a.gstDevice == device; });
+
+    if (it != m_videoSources.end()) {
+        m_videoSources.erase(it);
         videoInputsChanged();
+    }
 
     gst_object_unref(device);
 }
 
-static GstDevice *getDevice(const QSet<GstDevice *> &devices, const char *key, const QByteArray &id)
-{
-    GstDevice *gstDevice = nullptr;
-    for (auto *d : devices) {
-        QGstStructure properties = gst_device_get_properties(d);
-        if (!properties.isNull()) {
-            auto *name = properties[key].toString();
-            if (id == name) {
-                gstDevice = d;
-            }
-        }
-        properties.free();
-        if (gstDevice)
-            break;
-    }
-    return gstDevice;
-}
-
 GstDevice *QGstreamerVideoDevices::videoDevice(const QByteArray &id) const
 {
-    return getDevice(m_videoSources, "device.path", id);
+    auto it = std::find_if(m_videoSources.begin(), m_videoSources.end(),
+                           [=](const QGstDevice &a) { return a.id == id; });
+    return it != m_videoSources.end() ? it->gstDevice : nullptr;
 }
 
 QT_END_NAMESPACE
